take action spacing fixed - 2

--- a/docroot/sites/all/themes/ambitious/sass/issue-fixing.scss
+++ b/docroot/sites/all/themes/ambitious/sass/issue-fixing.scss
@@ -789,14 +789,7 @@ html.js fieldset.collapsed{
   }
 }
 article.node-223806, article.node-223591{
-  padding:40px 80px;
-position: relative;
-margin: 0 0 30px;
-background: #ffffff;
-border: 1px solid #d2d5d6;
--webkit-box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.25);
-box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.25);
-margin-bottom:30px;
+  padding:40px 80px; 
 }
 .easy-breadcrumb{
  position: absolute;
